--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,19 @@
+backports.functools-lru-cache==1.5
+configparser==3.5.0
 cycler==0.10.0
-matplotlib==1.5.3
-mccabe==0.5.2
-numpy==1.11.1
-pep8==1.7.0
-pydocstyle==1.0.0
-pyflakes==1.3.0
-pylama==7.1.0
-pyparsing==2.1.9
-pyserial==3.1.1
-python-dateutil==2.5.3
-pytz==2016.6.1
-six==1.10.0
-wx==3.0.3
+matplotlib==2.1.2
+mccabe==0.6.1
+numpy==1.14.1
+pep8==1.7.1
+pycodestyle==2.3.1
+pydocstyle==2.1.1
+pyflakes==1.6.0
+pylama==7.4.3
+pyparsing==2.2.0
+pyserial==3.4
+python-dateutil==2.6.1
+pytz==2018.3
+six==1.11.0
+snowballstemmer==1.2.1
+subprocess32==3.2.7
+wxPython==4.0.1
